# juejin

./: .gitignore  CHANGELOG.md  HOW_TO_USE.txt  PROJECT_COMPLETE.md  PROJECT_V6_UPGRADE.md  README.md  TESTING_GUIDE.md  lifecycle_transition_audit.csv  md_html_consistency_report.md  pyproject.toml  replay_v1_2_1.py  run_shadow.bat  signal_and_action_diff.md  signal_ledger_callsite_audit.md  signal_ledger_final_acceptance.md  signal_ledger_fix_report.md  signal_ledger_migration_audit.md  signal_ledger_schema_compatibility.md  start_trade_form.bat  start_trade_form_silent.bat  stop_trade_form.bat
archive_before_signal_ledger_fix/: daily_v1_2026-07-11.html  daily_v1_2026-07-11.md  radar_state.csv  run_daily_v1_html.py  signal_cases.csv  signal_ledger.py  test_signal_ledger.py  version.py
artifacts/daily_audit/: latest_5_trading_days_audit.csv  latest_5_trading_days_audit.md  radar_design.md
artifacts/replay/: blocked_days.csv  daily_account.csv  invariant_violations.csv  monitoring_actions.csv  orders.csv  replay_report.md  signals.csv  trades.csv
artifacts/retreat_audit/: original_source.md
data/: industry_index_map.csv
docs/: daily_workflow_v1_1.md
v0_6/: __init__.py
v0_6/core/: __init__.py  config.py  etf_matcher.py  gold_signal_v6.py  industry_groups.py  live_trade_monitor.py  live_trade_store.py  mainline_monitor.py  market_data.py  monitor_v6.py  observation_tracker.py  replay_engine.py  retreat_signal.py  signal_b.py  signal_ledger.py  signal_radar.py  version.py
v0_6/data/: industry_groups.json  rules.json
v0_6/docs/: TRADING_RULES.md
(+44 files in other folders)
